street brawler shtuff

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title> Infinite Runner</title>
+        <title> street Brawler</title>
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="viewport" content="minimal-ui">
         
@@ -17,7 +17,7 @@
         <script src="js/game/states/MainMenu.js"></script>
         <script src="js/game/states/Game.js"></script>
         
- .       <style>
+        <style>
             body{
                 margin: 0px;
                 padding: 0px;
