--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
     <head>
-        <title> street Brawler</title>
+
+        <title> Final Stand</title>
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="viewport" content="minimal-ui">
         
