--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <script src="js/game/states/Preload.js"></script>
         <script src="js/game/states/MainMenu.js"></script>
         <script src="js/game/states/Game.js"></script>
-        
+        <script src="js/game/prefabs/gun.js"></script>
+        <script src="js/game/prefabs/bullet.js"></script>
         <style>
             body{
                 margin: 0px;
